manifests/overlays/dev/patch-cloudsql-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: symphony
spec:
  template:
    spec:
      containers:
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.14.1
          args:
            - --structured-logs
            - --port=5432
            - PROJECT_ID:REGION:INSTANCE_DEV
          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
